# publicviewing-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  Vagrantfile
.github/workflows/: build.yml  fmt.yml  publish.yml  release.yml
src/: command_line.rs  main.rs
