[package]
name = "publicviewing-cli"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.20", features = ["derive"] }
instant = "0.1.13"
wry = "0.35.2"
tao = "0.23"
