[package]
name = "publicviewing-cli"
description = "Small command line application that displays one or many given URLs in a OS native WebView"
license-file = "LICENSE"
documentation = "https://github.com/smuel-adm/publicviewing-cli"
homepage = "https://github.com/smuel-adm/publicviewing-cli"
repository = "https://github.com/smuel-adm/publicviewing-cli"
version = "1.3.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.20", features = ["derive"] }
tao = "0.30.6"
wry = "0.47.0"

[profile.release]
lto = true
